# so_long_42

./: .gitignore  CMakeLists.txt  Makefile  Makefile.txt  README.md  a.ber  main.c  map_tester.sh  notes  runs_map.sh  so_long  test_check.txt
assets/maps/: NewWorld.ber  a.ber  ab.ber  crash.ber  cylindre.ber  exemple_map.ber  map_01.ber  map_03.ber  map_04.ber  min_map.ber  minim_map_01.ber  minim_map_02.ber  one_line.ber  short.ber  testing.ber
include/: aux_so_long.h  custom_macros.h  so_long.h
includes/: aux_so_long.h  so_long.h  so_long_utils.h
libs/MLX42/cmake/: Findglfw3.cmake
libs/MLX42/include/lodepng/: lodepng.h
libs/MLX42/lib/png/: lodepng.c
libs/MLX42/src/textures/: mlx_xpm42.c
libs/get_next_line/: Makefile  get_next_line.c  get_next_line.h  get_next_line_bonus.c  get_next_line_bonus.h  get_next_line_utils.c  get_next_line_utils_bonus.c
libs/libft/: ft_bzero.c  ft_calloc.c  ft_isalnum.c  ft_isalpha.c  ft_isdigit.c  ft_isprint.c  ft_memcmp.c  ft_putnbr_fd.c  ft_putstr_fd.c  ft_split.c  ft_strchr.c  ft_strdup.c  ft_striteri.c  ft_strlcat.c  ft_strlcpy.c  ft_strncmp.c  ft_strnstr.c  ft_strrchr.c  ft_substr.c  ft_tolower.c  ft_toupper.c  libft.h
libs/libft_new/: Makefile  ft_atoi.c  ft_isascii.c  ft_itoa.c  ft_memchr.c  ft_memcpy.c  ft_memmove.c  ft_memset.c  ft_putchar_fd.c  ft_putendl_fd.c  ft_strjoin.c  ft_strlen.c  ft_strmapi.c  ft_strtrim.c
libs/minilibx-linux/: Makefile  Makefile.mk  mlx.h  mlx_int.h  mlx_lib_xpm.c  mlx_xpm.c
libs/printf/: Makefile  ft_printf.c  ft_put_uint_nbr.c  ft_putchar_n.c  ft_putnbr_n.c
libs/printf_f/: Makefile  ft_printf.h  ft_put_ptr.c  ft_puthexa_nbr.c  ft_putstr.c
so_long_tester/: check
srcs/: flood_fill.c  free_game.c  ft_aux.c  ft_free_errors.c  game.c  get_map_and_validate_items.c  get_map_with_gnl.c  graphics.c  graphics.txt  init_structs.c  init_structures.c  map.c  moves_game.c  print_functions.c  so_long.c  so_long.txt  utils_functions.c  validations_map.c
